use throttled logger in ImportHeadersStep
Signed-off-by: Jason Frame <jason.frame@consensys.net>